--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/solar-system-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planetary System</title>
+    <title>Interactive Solar System</title>
     <!-- Disable context preservation option which may help with WebGL crashes -->
     <script>
       window.addEventListener('load', function() {
