fix: UI Issue Fix, Help Menu Added Closes #4

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     </div>
     
     <div id="root"></div>
+    <div id="modal-root" style="position: fixed; top: 0; left: 0; z-index: 100000;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
